fix: Fix loading bar not visible isse

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.header {
+    margin-top: 3px;
+}
+
 .dashboard {
     .nav-tabs {
         margin-bottom: 25px;
